--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "type": "module",
   "devDependencies": {
     "@types/node": "^25.2.0",
@@ -21,6 +24,8 @@
     "@prisma/adapter-better-sqlite3": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "better-sqlite3": "^12.6.2",
-    "fastify": "^5.7.2"
+    "fastify": "^5.7.2",
+    "short-unique-id": "^5.3.2",
+    "zod": "^4.3.6"
   }
 }
