--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.0",
-    "prisma": "^7.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "20": "^3.1.9",
     "@fastify/cors": "^11.2.0",
     "@prisma/adapter-better-sqlite3": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "fastify": "^5.7.2",
+    "jsonwebtoken": "^9.0.3",
+    "prisma": "^5.22.0",
     "short-unique-id": "^5.3.2",
     "zod": "^4.3.6"
   }
